# Image-DIfference-Captioning

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: Planing.md  index.md
models/: IDC.py
notebooks/: 1.0-Pre-Processing.ipynb
