[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "IDC"
version = "0.0.1"
description = "The project aims to develop a tool to automatically describe the differences between two works of art."
authors = [
  { name = "Francesco Manco" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["IDC"]
force_sort_within_sections = true
